fix: change css for tooltip overlap

--- a/component/src/styles/ui-component.css
+++ b/component/src/styles/ui-component.css
@@ -186,11 +186,11 @@
   font-size: 12px;
   color: #fff;
   text-align: center;
-  padding: 4px 8px;
+  padding: 4px 6px;
   border-radius: 4px;
   position: absolute;
   z-index: 20;
-  top: -85%;
+  top: -35%;
   left: 50%;
   transform: translateX(-50%);
   white-space: nowrap;
